--- a/Projekt/OptimierungCode/optimierung/src/DetailedCars.css
+++ b/Projekt/OptimierungCode/optimierung/src/DetailedCars.css
@@ -19,10 +19,12 @@ header {
   text-align: center;
   width: 100%;
 }
+
 header .logo {
   width: 100px;
   height: auto;
 }
+
 header h1 {
   font-size: 24px;
   margin-top: 10px;
@@ -34,6 +36,7 @@ nav {
   padding: 10px;
   width: 100%;
 }
+
 nav ul {
   list-style-type: none;
   display: flex;
@@ -41,14 +44,17 @@ nav ul {
   padding: 0;
   margin: 0;
 }
+
 nav ul li {
   margin-right: 10px;
 }
+
 nav ul li a {
   color: white;
   text-decoration: none;
   padding: 10px 20px;
 }
+
 nav ul li a:hover {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 5px;
@@ -83,6 +89,7 @@ main {
   align-items: center;
   width: 100%;
 }
+
 .image-container img {
   max-width: 100%;
   height: auto;
@@ -98,6 +105,7 @@ main {
   width: 100%;
   margin-top: 20px;
 }
+
 .details-container h2 {
   margin-top: 0;
   text-align: center;
@@ -109,6 +117,7 @@ main {
   gap: 10px;
   width: 100%;
 }
+
 .detail-item {
   display: flex;
   justify-content: space-between;
@@ -129,6 +138,7 @@ main {
 .refresh-icon {
   margin-top: 10px;
 }
+
 .refresh-icon img {
   height: 24px;
   width: 24px;
@@ -137,28 +147,27 @@ main {
 @media screen and (min-width: 600px) {
   .container {
     display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 50px;
-  width: 80%;
-  gap: 20px;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 50px;
+    width: 80%;
+    gap: 20px;
   }
-
   .image-container, .details-container {
     flex: 1;
     margin-top: 0;
   }
-
   .details-container {
     align-items: flex-start;
     margin-left: 20px;
   }
 }
-
 @media screen and (min-width: 900px) {
   .container {
     padding: 50px;
     width: 80%;
   }
 }
+
+/*# sourceMappingURL=DetailedCars.css.map */
