--- a/Projekt/OptimierungCode/optimierung/src/HomePage.css
+++ b/Projekt/OptimierungCode/optimierung/src/HomePage.css
@@ -7,7 +7,7 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
-  background-image: url('fotos/Car1.jpg');
+  background-image: url("fotos/Car1.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -20,12 +20,10 @@ header {
   padding: 20px;
   text-align: center;
 }
-
 header .logo {
   width: 100px;
   height: auto;
 }
-
 header h1 {
   font-size: 24px;
   margin-top: 10px;
@@ -36,22 +34,18 @@ nav {
   padding: 10px;
   text-align: center;
 }
-
 nav ul {
   list-style-type: none;
 }
-
 nav ul li {
   display: inline-block;
   margin-right: 10px;
 }
-
 nav ul li a {
   color: white;
   text-decoration: none;
-  padding: 5px 10px;
+  padding: 10px 20px;
 }
-
 nav ul li a:hover {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 5px;
@@ -59,7 +53,6 @@ nav ul li a:hover {
 
 main {
   padding: 0;
-  margin: 0;
 }
 
 .welcome-section {
@@ -68,20 +61,18 @@ main {
   display: flex;
   align-items: center;
 }
-
 .welcome-section .background-image {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-image: url('fotos/Car1.jpg');
+  height: 180%;
+  background-image: url("fotos/Car1.jpg");
   background-size: cover;
   background-position: center;
   filter: blur(8px);
   z-index: -1;
 }
-
 .welcome-section .welcome-text {
   max-width: 600px;
   margin-left: auto;
@@ -90,12 +81,10 @@ main {
   padding: 20px;
   border-radius: 5px;
 }
-
 .welcome-section .welcome-text h2 {
   font-size: 32px;
   margin-bottom: 10px;
 }
-
 .welcome-section .welcome-text p {
   font-size: 18px;
   line-height: 1.6;
@@ -106,43 +95,44 @@ footer {
   color: white;
   text-align: left;
   padding: 50px;
-  margin-top: 0px;
+  margin-top: 175px;
   justify-content: space-between;
 }
-
-.grid-container {
+footer .grid-container {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(1, 1fr);
   grid-gap: 20px;
 }
-
-.grid-item {
+footer .grid-container .grid-item {
   padding: 20px;
 }
+
 @media screen and (min-width: 600px) {
   .welcome-section {
     flex-direction: row;
     justify-content: center;
     align-items: center;
   }
-
   .grid-container {
+    display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
   }
 }
-
 @media screen and (min-width: 900px) {
   .welcome-section {
     min-height: 500px;
   }
-
   .grid-container {
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .welcome-section {
     min-height: 700px;
   }
 }
+
+/*# sourceMappingURL=HomePage.css.map */
